--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "miragejs": "^0.1.41"
   }
 }
