--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,11 +3,11 @@ FROM node:lts-alpine
 ENV HOME=/app
 WORKDIR $HOME
 
-COPY package.json package-lock.json ./
+COPY package*.json ./
 RUN npm install
 
 COPY . .
 
-# RUN npm run-script build
+RUN npm run-script build
 EXPOSE 3000
-CMD [ "npm", "run-script", "dev" ]
+CMD [ "npm", "run-script", "start" ]
